# cbx-pycli

./: .env  .gitignore  .gitmodules  LICENCE  README.md  build.sh  entrypoint  force_rm.sh  initproject  installdeps  invoke.yaml  makefile  poetry.toml  pyproject.toml
DEBIAN/: changelog  control  postinst  postrm  prerm
cbx_pycli/: main.py  prompts.py  tasks.py
cbx_pycli/tasks/: __init__.py  docker.py  git.py  poetry.py  python_versioning.py
docs/: DEV.md
scripts/: detect_os.sh  detect_shell.sh  getshell  init_dev.sh  init_pyenv.sh  install_deps.sh  install_dev_deps.sh  installpyenv  os_detect.sh  path_list.sh  shell_detect.sh  uninstall.sh  uninstallpyenv
