[tool.poetry]
name = "cbx-pycli"
version = "0.1.0"
description = ""
authors = ["Arthur Béquié <arthurbequie@protonmail.com>"]
readme = "README.md"
packages = [{include = "cbx_pycli"}]

[tool.poetry.dependencies]
python = ">3.9, <=3.13"
typer = {extras = ["all"], version = "^0.9.0"}
rich = {extras = ["all"], version = "^13.7.1"}
python-dotenv = "^1.0.1"
structlog = "^24.1.0"
sh = "^2.0.6"
colorama = "^0.4.6"


[tool.poetry.group.dev.dependencies]
pdoc = "^14.4.0"
pytest = "^8.0.2"
tox = "^4.13.0"
behave = "^1.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pycli = "cbx_pycli.main:app"
