[tool.poetry]
name = "cbx-pycli"
version = "0.1.0"
description = ""
authors = ["Arthur Béquié <arthurbequie@protonmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
cbx-pycli = "cbx_pycli.main:app"


[tool.poetry.dependencies]
python = ">3.9, <=3.13"
typer = {extras = ["all"], version = "^0.9.0"}
python-dotenv = "^1.0.1"
inquirerpy = "^0.3.4"
rich = "^13.7.1"
invoke = "^2.2.0"
pandas = "^2.2.1"

[tool.poetry.group.dev.dependencies]
pdoc = "^14.4.0"
pytest = "^8.0.2"
behave = "^1.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
